# tch-practice

./: .gitignore  Cargo.toml
data/: download_mnist.sh
src/: config.rs  data_loader.rs  lib.rs  main.rs
